byte-code-compiler/test_files/typing/bad/testfile-binop.psc
string s = "Hello" + 2;
i8 = 200; //too big
u8 = 260; //too big